// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on \`GifExpertApp\` component GifExpertApp should be created 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Tests on \`GifExpertApp\` component should shows categories 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Category 1"
      key="Category 1"
    />
    <GifGrid
      category="Category 2"
      key="Category 2"
    />
  </ol>
</div>
`;
